Deadlock in CoreAudioCaptureSource https://bugs.webkit.org/show_bug.cgi?id=170771 rdar://problem/31578919

Patch by Jeremy Jones <jeremyj@apple.com> on 2017-04-18
Reviewed by Eric Carlson.

Fixes a regression introduced by r215201.

* platform/mediastream/mac/CoreAudioCaptureSource.cpp:
(WebCore::CoreAudioCaptureSource::startProducingData):
(WebCore::CoreAudioCaptureSource::stopProducingData):

Canonical link: https://commits.webkit.org/187892@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215485 268f45cc-cd09-0410-ab3c-d52691b4dbfc